<resources>
    <string name="app_name">Demo</string>

    <string name="text_more">更多</string>
    <string name="text_pull_up_to_load_detail">继续上拉加载详情</string>
    <string name="text_no_data">暂无数据</string>

    <string name="text_exit_app">退出应用</string>
    <string name="text_confirm_exit_app">确认退出应用？</string>
    <string name="text_confirm">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_search">搜索</string>

    <string name="text_profile_menu_bottom_navigation">我的</string>
    <string name="text_test1_menu_bottom_navigation">首页</string>
    <string name="text_test2_menu_bottom_navigation">第二</string>
    <string name="text_test3_menu_bottom_navigation">第三</string>
    <string name="text_current_version">当前版本</string>
    <string name="text_logout">退出登录</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="text_login_or_register">登录/注册</string>
    <string name="text_settings">设置</string>
    <string name="text_register">注册</string>
    <string name="text_app_description">一个测试App</string>
    <string name="text_username">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_email">邮箱</string>
    <string name="text_phone">手机号</string>
    <string name="text_avatar">头像</string>
    <string name="text_canceled">操作已取消</string>
    <string name="text_user_information">个人信息</string>
    <string name="text_not_empty">总得说点什么吧</string>
</resources>
