<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_map_menu_bottom_navigation"
        android:icon="@drawable/ic_test1_gray_24dp"
        android:title="@string/text_test1_menu_bottom_navigation" />
    <item
        android:id="@+id/item_description_menu_bottom_navigation"
        android:icon="@drawable/ic_test2_gray_24dp"
        android:title="@string/text_test2_menu_bottom_navigation" />
    <item
        android:id="@+id/item_notifications_menu_bottom_navigation"
        android:icon="@drawable/ic_test3_gray_24dp"
        android:title="@string/text_test3_menu_bottom_navigation" />
    <item
        android:id="@+id/item_profile_menu_bottom_navigation"
        android:icon="@drawable/ic_profile_gray_24dp"
        android:title="@string/text_profile_menu_bottom_navigation" />
</menu>